# preact-wasm-example

./: README.md  index.js  manifest.json  package-lock.json  package.json  preact.config.js
hello-wasm/: Cargo.toml  LICENSE_MIT
hello-wasm/src/: lib.rs
